documentado el gym controller
