# app/Http/Controllers/GymController.php
@@ -9,6 +9,18 @@ use Illuminate\Http\Request;
 
 class GymController extends Controller
 {
+
+    /**
+    * @OA\Get(
+    *     path="/api/gym",
+    *     summary="List of gyms",
+    *     tags={"gym"},
+    *     @OA\Response(
+    *         response=200,
+    *         description="List of gyms"
+    *     ),
+    * )
+    */
     public function index(){
 
         $gyms = Gym::all();
