# routes/api.php
@@ -2,7 +2,9 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\AvatarController;
+use App\Http\Controllers\GymController;
 use App\Http\Controllers\VictimController;
+
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -23,5 +25,7 @@ Route::group([
 });
 
 Route::post('/victima', [VictimController::class, 'addVictim']);
+
+Route::get('/gym', [GymController::class, 'index']);
 
 Route::post('/avatar', [AvatarController::class, 'addAvatar']);
